SFUSA/force-app/main/default/objects/EGandLMFSpend__c/fields/Balance__c.field-meta.xml
<CustomField>
        <fullName>Balance__c</fullName>
        <formula>Budget__c - ActualSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget - Actual Spend.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>