SFUSA/force-app/main/default/objects/EGandLMFSpend__c/fields/Comments__c.field-meta.xml
<CustomField>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </CustomField>