SFUSA/force-app/main/default/objects/EGandLMFSpend__c/fields/ParentEGorLMF__c.field-meta.xml
<CustomField>
        <fullName>ParentEGorLMF__c</fullName>
        <label>Master EG or LMF</label>
        <referenceTo>EG_and_LMF__c</referenceTo>
        <relationshipLabel>EG and LMF Spend</relationshipLabel>
        <relationshipName>EG_and_LMF_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>