SFUSA/force-app/main/default/objects/EGandLMFSpend__c/fields/Year__c.field-meta.xml
<CustomField>
        <fullName>Year__c</fullName>
        <formula>text(ParentEGorLMF__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </CustomField>