SFUSA/force-app/main/default/objects/EGandLMFSpend__c/recordTypes/LMFSpend.recordType-meta.xml
<RecordType>
        <fullName>LMFSpend</fullName>
        <active>true</active>
        <description>LMF Spend.</description>
        <label>LMF Spend</label>
    </RecordType>